# my_shop

./: Cargo.toml  docker-compose.yml
migrations/: 20260416034507_create_users.down.sql  20260416034507_create_users.up.sql  20260422000000_create_refresh_tokens.down.sql  20260422000000_create_refresh_tokens.up.sql
src/: main.rs
src/dto/: auth.rs
src/entities/: refresh_token.rs  user.rs
src/handlers/: auth.rs  error.rs  extractor.rs  mod.rs  user.rs
src/helpers/: jwt.rs  mod.rs  password.rs  token.rs
src/repositories/: refresh_token.rs  user.rs
src/routes/: auth.rs  health.rs  mod.rs  user.rs
src/services/: auth.rs
