[package]
name = "my_shop"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
argon2 = "0.5.3"
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["macros"] }
chrono = "0.4.44"
dotenv = "0.15.0"
hex = "0.4.3"
humantime = "2.3.0"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
r2d2 = "0.8.10"
redis = { version = "1.2.0", features = ["r2d2", "tokio-comp"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "chrono"] }
thiserror = "2.0.18"
tokio = { version = "1.51.0", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["compression-full", "cors", "decompression-full", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.0", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"] }
